# mycampus-calendar-rs

./: .gitignore  Cargo.toml  README.md  nodemon.json
.github/ISSUE_TEMPLATE/: parser_error.yml
.github/workflows/: ci.yml
src/: main.rs  parser.rs
