[package]
name = "mycampus-calendar-rs"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.10", features = ["macros"] }
regex = "1"
chrono = "0.4"
uuid = {version = "0.8", features = ["v4"]}
indoc = "1"
