[package]
name = "mycampus-calendar-rs"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.10", features = ["macros"] }
regex = "1"
chrono = "0.4"
uuid = {version = "0.8", features = ["v4"]}
indoc = "1"
eframe = { version = "0.28.1", features = ["persistence"] }
egui_extras = { version = "0.28.1", features = ["datepicker"] }
once_cell = "1.19.0"
rfd = "0.14.1"
serde = "1.0.228"
serde_json = "1.0.145"
